fix linked products css on small devices

--- a/src/style/Product.scss
+++ b/src/style/Product.scss
@@ -157,4 +157,7 @@
   display: flex;
   margin-top: $spacing-medium;
   justify-content: space-around;
+  @media screen and (max-width: 599px) {
+    flex-direction: column;
+  }
 }
